...
            }
        }

        Spacer(modifier = Modifier.height(48.dp))

        Text(
            text = "Witaj w MyDesk",
            style = MaterialTheme.typography.headlineMedium
        )

        Spacer(modifier = Modifier.height(8.dp))

        Text(
...
